src/objects/Bulk_Buyer_Post__c.object
<CustomObject>
    <description>A post that is made by a buyer or a seller on the bulk buyer system.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this offer still available</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <description>The commodity for sale</description>
        <label>Commodity</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>Today() + 21</defaultValue>
        <description>The date that the offer ends</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Poster__c</fullName>
        <description>The account that has made the post</description>
        <inlineHelpText>Select the account that produced this post</inlineHelpText>
        <label>Poster</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bulk Buyer Posts</relationshipLabel>
        <relationshipName>Bulk_Buyer_Posts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>The price per unit for the commodity</description>
        <label>Price</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <description>What is the quality of the product</description>
        <label>Quality</label>
        <picklist>
            <picklistValues>
                <fullName>Great</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terrible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>How much of the product is on offer</description>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Gulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kapchorwa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date that the offer begins</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>What is the post for</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>What unit of the commodity is the price for</description>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Lbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tonnes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bulk Buyer Post</label>
    <nameField>
        <displayFormat>BBP-{00000000}</displayFormat>
        <label>Bulk Buyer Post Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Buyer Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>